# slideSonnet

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  slidesonnet.sty
.claude/: CLAUDE.md
.claude/agents/: beamer-writer.md  marp-writer.md
.claude/rules/: architecture.md  ci.md  formatting.md  testing.md
.claude/skills/beamer-writer/: SKILL.md
.claude/skills/marp-writer/: SKILL.md
.claude/skills/pm/: SKILL.md
.claude/skills/ux-review/: SKILL.md
.github/workflows/: ci.yml  publish.yml
assets/logo/: slidesonnet-logo.html
docs/: beamer.md  marp.md
examples/basel-problem/: basel-problem.he.srt  basel-problem.srt  basel-thumbnail.html  fact-check.md  lecture.md  lecture.yaml  slides.md  theme.css
examples/basel-problem-he/: basel-problem-he.srt  lecture.md  lecture.yaml  slides.md  slides.tex
examples/basel-problem-he/pronunciation/: names.md
examples/basel-problem/pronunciation/: names.md
examples/graph-theory/: lecture01.md
examples/graph-theory/01-intro/: slides.md
examples/graph-theory/02-definitions/: slides.md
examples/graph-theory/pronunciation/: cs-terms.md
examples/showcase/: .env.example  lecture.md  lecture.yaml  lecture01.md  part1.md  part2.tex  part3.md  showcase.srt  slides.md  slidesonnet-thumbnail.html  slidesonnet.yaml
examples/showcase/01-intro/: slides.md
examples/showcase/02-deep-dive/: slides.tex
examples/showcase/03-examples/: slides.md
examples/showcase/pronunciation/: general.md  names.md
src/slidesonnet/: __init__.py  actions.py  clean.py  cli.py  config.py  doctor.py  exceptions.py  hashing.py  init.py  models.py  pipeline.py  playlist.py  preview.py  subtitles.py  tasks.py
src/slidesonnet/parsers/: base.py  beamer.py  expansion.py  marp.py
src/slidesonnet/templates/: blank_playlist.md  blank_playlist.yaml  blank_slides.md  (+10 more)
tests/: conftest.py  test_actions.py  test_beamer_parser.py  test_clean.py  test_cli.py  test_composer.py  test_config.py  test_doctor.py  test_dry_run.py  test_elevenlabs.py  test_elevenlabs_extended.py  test_expansion.py  test_hashing.py  test_init.py  test_marp_parser.py  test_models.py  test_no_secrets.py  test_pipeline.py  test_piper.py  test_playlist.py  test_preflight.py  test_preview.py  test_pronunciation.py  test_showcase_build.py  test_strip_annotations.py  test_subtitles.py  test_tasks.py
tests/fixtures/: playlist_basic.md  playlist_basic.yaml  simple.md  simple.tex
(+6 files in other folders)
