[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slidesonnet"
version = "0.1.0"
description = "Compile text-based presentations into narrated videos"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "doit>=0.36",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
piper = ["piper-tts>=1.4"]
elevenlabs = ["elevenlabs>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
slidesonnet = "slidesonnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: requires external tools (ffmpeg, marp, etc.)",
]
