[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slidesonnet"
dynamic = ["version"]
description = "Compile text-based presentations into narrated videos"
readme = "README.md"
license = "MIT"
authors = [{name = "Aviv Zohar"}]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "doit>=0.36",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
piper = ["piper-tts>=1.4"]
elevenlabs = ["elevenlabs>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/avivz/slideSonnet"
Source = "https://github.com/avivz/slideSonnet"

[project.scripts]
slidesonnet = "slidesonnet.cli:main"

[tool.setuptools.dynamic]
version = {attr = "slidesonnet.__version__"}

[tool.setuptools.package-data]
"slidesonnet.templates" = ["*.md", "*.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "doit.*",
    "elevenlabs.*",
    "dotenv.*",
    "piper.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: requires external tools (ffmpeg, marp, etc.)",
]
